<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dark VK</string>
    <string name="icon_share_content_description">Иконка поделиться</string>
    <string name="share_title">Делитесь фотографиями</string>
    <string name="share_subtitle">Поделитесь фотографией на стене и добавьте к ней описание</string>
    <string name="pick_photo_button_title">Выбрать фото</string>
    <string name="share_fragment_title">Поделиться на стене</string>
    <string name="input_share_hint">Добавить комментарий</string>
    <string name="send_button_title">Отправить</string>
    <integer name="com_vk_sdk_AppId" tools:ignore="UnusedResources">7347519</integer>
    <string name="map_api_key" translatable="false">AIzaSyBRf1146_0-Vgc2xdBWcAsay4ZYlicpOGs</string>

    <string name="select_city_title">Город</string>
    <string name="loading_text">Подождите, идет загрузка…</string>
    <string name="emptyState_text">На данный момент данные отсутствуют</string>
    <string name="error_title">Что-то пошло не так</string>
    <string name="add_to_favorite_text">Добавить в избранное</string>
    <string name="remove_from_favorite_text">Удалить из избранного</string>
    <string name="open_button_title">Открыть</string>
    <string name="unsubscribe_text">Отписаться</string>

    <string name="documentListContextMenu_remove">Удалить документ</string>
    <string name="documentListContextMenu_rename">Переименовать</string>
    <string name="type_image_content_description">Изображение типа документа</string>
    <string name="dots_content_description">Иконка действия</string>
    <string name="name_editText_hint">Название документа</string>
    <string name="UnsubscribeTitle">Отписаться от сообществ</string>
    <string name="UnsubscribeSubtitle">Коснитесь и удерживайте, чтобы увидеть информацию о сообществе</string>
</resources>
