<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/share_content_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:paddingBottom="32dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconImageView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/icon_share_content_description"
            android:src="@drawable/ic_share" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:text="@string/share_title" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/subtitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp"
            android:text="@string/share_subtitle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pickPhotoButton"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/pick_photo_button_title" />

        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>

